fix z-index on nav

--- a/app/styles/components/nav-bar.scss
+++ b/app/styles/components/nav-bar.scss
@@ -7,6 +7,7 @@
   background: $c-secondary;
   color: $c-primary;
   position: fixed;
+  z-index: 1;
 
   @media (min-width: 350px) and (max-width: 736px) {
     .nav__right {
